--- a/css/styles.css
+++ b/css/styles.css
@@ -910,13 +910,36 @@ textarea{
   transition-timing-function: (0.4, 0, 0.2, 1);
 }
 
+.visually-hidden{
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
 .modal-form-label-link{
   text-decoration: underline;
   color: var(--main-color-hover-focus)
 }
 
-.visually-hidden {
-  display: none;
+.modal-form-checkbox-label::before{
+  display: block;
+  content: "";
+  border-radius: 2px;
+  border: 1px solid var(--main-color);
+  width: 16px;
+  height: 15px;
+  cursor: pointer;
+}
+
+.modal-form-checkbox:checked + .modal-form-checkbox-label::before{
+  box-shadow: inset 0 0 0 1px var(--main-color-hover-focus);
+  background-image: url("../img/Vector.svg");
+  margin-top: 20px;
 }
 
 .modal-button-position{
