--- a/css/styles.css
+++ b/css/styles.css
@@ -871,11 +871,9 @@ textarea{
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
-}
-
-.modal-form-checkbox:checked + .modal-form-checkbox-label::before {
-  background-color: var(--main-color-hover-focus);
-  box-shadow: inset 0 0 0 4px #ffffff;
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
 }
 
 .modal-form-checkbox{
@@ -939,16 +937,13 @@ textarea{
 .modal-form-checkbox:checked + .modal-form-checkbox-label::before{
   box-shadow: inset 0 0 0 1px var(--main-color-hover-focus);
   background-image: url("../img/Vector.svg");
-  margin-top: 20px;
+  background-position: 1px 2px;
+  background-color: var(--main-color-hover-focus);
 }
 
 .modal-button-position{
   display: block;
   margin-top: 20px;
-}
-
-.modal-form-icon-check{
-  
 }
 
 
